updated approximations version